@@ -58,6 +58,8 @@ Where "NUMBER" is the bug number.
  - Fixed: The WHOIS away-line ignored irc_whois_front setting.
  - Scroll-wheel now works while hovering over a tab (Khisanth).
  - Added support for Italic text (ctrl-shift-1d).
+ - Added xchat-remote for launching irc:// URLs in existing xchat
+   and other functions (Claessens Xavier).
  - 
 
 
